--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
 
+For those who joined today:- 
+
+With GitHub , I'll post all information on twitter too. 
+https://twitter.com/SatarupaSushree/status/1414298947116363776?s=1005
+
+GitHub link:- 
+https://github.com/Sushreesatarupa/DSA-60Days
+Star the repo or fork it.
+We shall start dsa from today.
+
+https://practice.geeksforgeeks.org/courses/fork-cpp
+Use this course to revise your cpp fundamentals
+
+And if anyone is using any other languages rather than c++ then don't worry.
+Syntax may be different but concepts would remain the same!
+
+Try finishing all topics of day 1 by Evening, then we shall solve 1-2 basic cpp questions.
+
+Use this group to discuss among yourselves 
+
+If you have any doubts or get stuck somewhere you can discuss here and also ask us for help.
