--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 
-For those who joined today:- 
+For those who joined today:- <br>
 
-With GitHub , I'll post all information on twitter too. 
+With GitHub , I'll post all information on twitter too. <br>
 https://twitter.com/SatarupaSushree/status/1414298947116363776?s=1005
-
-GitHub link:- 
+<hr>
+GitHub link:- <be>
 https://github.com/Sushreesatarupa/DSA-60Days
-Star the repo or fork it.
-We shall start dsa from today.
+<br>
+Star the repo or fork it.<br>
+We shall start dsa from today.<hr>
 
 https://practice.geeksforgeeks.org/courses/fork-cpp
 Use this course to revise your cpp fundamentals
