--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ For those who joined today:- <br>
 With GitHub , I'll post all information on twitter too. <br>
 https://twitter.com/SatarupaSushree/status/1414298947116363776?s=1005
 <hr>
-GitHub link:- <be>
+GitHub link:- <br>
 https://github.com/Sushreesatarupa/DSA-60Days
 <br>
 Star the repo or fork it.<br>
