--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ And if anyone is using any other languages rather than c++ then don't worry.
 Syntax may be different but concepts would remain the same!
 <br>
 Try finishing all topics of day 1 by Evening, then we shall solve 1-2 basic cpp questions.
-<br>
-Use this group to discuss among yourselves 
+<br><hr>
+Use the wapp group to discuss among yourselves 
 <br>
 If you have any doubts or get stuck somewhere you can discuss here and also ask us for help.
 <br>
