--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-
+Hi people! 
+So we have started grasping dsa concepts and solving problems from 12 July. And we shall continue till September 10
 For those who joined today:- <br>
 
 With GitHub , I'll post all information on twitter too. <br>
