--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
-Hi people! 
-So we have started grasping dsa concepts and solving problems from 12 July. And we shall continue till September 10
+Hi people! <br>
+So we have started grasping dsa concepts and solving problems from 12 July. <br>
+And we shall continue till September 10<br>
+<hr>
 For those who joined today:- <br>
 
 With GitHub , I'll post all information on twitter too. <br>
