--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@ So we have started grasping dsa concepts and solving problems from 12 July. And 
 For those who joined today:- <br>
 
 With GitHub , I'll post all information on twitter too. <br>
-https://twitter.com/SatarupaSushree/status/1414298947116363776?s=1005
+<a href="https://twitter.com/SatarupaSushree/status/1414298947116363776?s=1005">twitter feed</a>
 <hr>
 GitHub link:- <br>
-https://github.com/Sushreesatarupa/DSA-60Days
+<a href="https://github.com/Sushreesatarupa/DSA-60Days">git hub repo</a>
 <br>
 Star the repo or fork it.<br>
 We shall start dsa from today.<hr>
 <br>
-https://practice.geeksforgeeks.org/courses/fork-cpp
+<a href="https://practice.geeksforgeeks.org/courses/fork-cpp">gfg learn C++</a>
 <br>
 Use this course to revise your cpp fundamentals
 <br>
