--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ We shall start dsa from today.<hr>
 <br>
 Use this course to revise your cpp fundamentals
 <br><br>
-And if anyone is using any other languages rather than c++ then don't worry.
+And if anyone is using any other languages rather than c++ then don't worry.<br>
 Syntax may be different but concepts would remain the same!
 <br><br>
 Try finishing all topics of day 1 by Evening, then we shall solve 1-2 basic cpp questions.
