--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-Hi people! <br>
+
+<html>
+    <head></head>
+    <body style="background-color: rgb(252, 229, 195);">
+        <div style="text-align: center;">
+            Hi people! <br>
 So we have started grasping dsa concepts and solving problems from 12 July. <br>
 And we shall continue till September 10<br>
 <hr><br>
@@ -27,4 +32,7 @@ Use the wapp group to discuss among yourselves
 If you have any doubts or get stuck somewhere you can discuss here and also ask us for help.
 <br>
 <hr>
+        </div>
+    </body>
+</html>
 
