--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@ With GitHub , I'll post all information on twitter too. <br>
 <a href="https://twitter.com/SatarupaSushree/status/1414298947116363776?s=1005">twitter feed</a>
 <br><hr>
 GitHub link:- <br>
-<a href="https://github.com/Sushreesatarupa/DSA-60Days">git hub repo</a>
+<a href="https://github.com/Sushreesatarupa/DSA-60Days">GitHub repo</a>
 <br>
 Star the repo or fork it.<br>
 We shall start dsa from today.<br><hr>
 <br>
-<a href="https://practice.geeksforgeeks.org/courses/fork-cpp">gfg learn C++</a>
+<a href="https://practice.geeksforgeeks.org/courses/fork-cpp"> GFG learn C++</a>
 <br>
 Use this course to revise your cpp fundamentals
 <br><br>
