--- a/index.html
+++ b/index.html
@@ -34,9 +34,10 @@ If you have any doubts or get stuck somewhere you can discuss here and also ask 
 <hr>
 <br>
 To be more clear <br>
+<b>
 Each day we have 2 tasks to complete.<br>
 1. Learn the day's target chapters. <br>
-2. Solve questions out of daily given 5 questions.<br>
+2. Solve questions out of daily given 5 questions.<br></b>
 <hr>
         </div>
     </body>
