--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head></head>
     <body style="background-color: rgb(252, 229, 195);">
-        <div style="text-align: center;">
+        <div style="text-align: center;"><br><hr><br>
             Hi people! <br>
 So we have started grasping dsa concepts and solving problems from 12 July. <br>
 And we shall continue till September 10<br>
