--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
     <head></head>
     <body style="background-color: rgb(252, 229, 195);">
-        <div style="text-align: center;"><br><hr><br>
+        <div style="text-align: center;"><br>
+<img src="https://github.com/Sushreesatarupa/Description-of-dsa60/blob/main/IMG_20210712_215737.jpg"><hr><br>
             Hi people! <br>
 So we have started grasping dsa concepts and solving problems from 12 July. <br>
 And we shall continue till September 10<br>
