--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 
 <html>
     <head></head>
-    <body style="background-color: rgb(252, 229, 195);">
+    <body style="    background-color: rgb(42 40 38);
+    color: lightgrey;">
         <div style="text-align: center;">
 <img src="https://github.com/Sushreesatarupa/Description-of-dsa60/blob/main/IMG_20210712_215737.jpg?raw=true" placeholder="DSA 60 Days"><hr><br>
             Hi people! <br>
