--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@ Each day we have 2 tasks to complete.<br>
 2. Solve questions out of daily given 5 questions.<br></b>
 <br><hr>
         </div>
+<footer> copyright @Sushree Satarupa </footer>
     </body>
 </html>
 
