--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@ GitHub link:- <br>
 <a href="https://github.com/Sushreesatarupa/DSA-60Days">GitHub repo</a>
 <br>
 Star the repo or fork it.<br>
+ <hr>
+            For complete cpp fundamentals theory visit :- <a href="C++ theory.html">CPP Theory</a>
 We shall start dsa from today.<br><hr>
 <br>
 <a href="https://practice.geeksforgeeks.org/courses/fork-cpp"> GFG learn C++</a>
