--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@ GitHub link:- <br>
 <a href="https://github.com/Sushreesatarupa/DSA-60Days">GitHub repo</a>
 <br>
 Star the repo or fork it.<br>
- <hr>
+
+We shall start dsa from today.<br> <hr><br>
             For complete cpp fundamentals theory visit :- <a href="C++ theory.html">CPP Theory</a>
-We shall start dsa from today.<br><hr>
-<br>
+<br><hr>
 <a href="https://practice.geeksforgeeks.org/courses/fork-cpp"> GFG learn C++</a>
 <br>
 Use this course to revise your cpp fundamentals
