--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ We shall start dsa from today.<br> <hr><br>
             For complete cpp fundamentals theory visit :- <a href="C++ theory.html">CPP Theory</a>
 <br><hr>
 <a href="https://practice.geeksforgeeks.org/courses/fork-cpp"> GFG learn C++</a>
+            <a href="https://www.geeksforgeeks.org/data-structures"> DSA ALL TOPICS LINK</a>
 <br>
 Use this course to revise your cpp fundamentals
 <br><br>
