--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 
 <html>
-    <head></head>
+    <head>
+        <style>
+            
+        </style>
+    
+    </head>
     <body style="    background-color: #000000;color: lightgrey;">
         <div style="text-align: center;">
 <img src="https://github.com/Sushreesatarupa/Description-of-dsa60/blob/main/IMG_20210712_215737.jpg?raw=true" placeholder="DSA 60 Days"><hr><br>
@@ -21,8 +26,8 @@ Star the repo or fork it.<br>
 We shall start dsa from today.<br> <hr><br>
             For complete cpp fundamentals theory visit :- <a href="C++ theory.html">CPP Theory</a>
 <br><hr>
-<a href="https://practice.geeksforgeeks.org/courses/fork-cpp"> GFG learn C++</a>
-            <a href="https://www.geeksforgeeks.org/data-structures"> DSA ALL TOPICS LINK</a>
+<a href="https://practice.geeksforgeeks.org/courses/fork-cpp"> GFG learn C++</a><br>
+            <a href="https://www.geeksforgeeks.org/data-structures"> DSA ALL TOPICS LINK</a> <p class="new">NEW</p>
 <br>
 Use this course to revise your cpp fundamentals
 <br><br>
