--- a/index.html
+++ b/index.html
@@ -2,7 +2,20 @@
 <html>
     <head>
         <style>
-            
+            .new{
+            animation-duration: 400ms;
+            animation-name: blink;
+            animation-iteration-count: infinite;
+            animation-direction: alternate;
+            }
+            @keyframes blink {
+               from {
+                  color: red;
+               }
+               to {
+                  color: yellow;
+               }
+             }
         </style>
     
     </head>
